# centralized-pre-commit-conf

./: .flake8  .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
centralized_pre_commit_conf/: .flake8  .pre-commit-config.yaml  __init__.py  config_default.yaml  configuration.py  constants.py  download_configuration.py  install.py  main.py  parse_args.py  prints.py  update_gitignore.py
centralized_pre_commit_conf/static/: .isort.cfg  .pre-commit-config.yaml  .pylintrc
tests/: test_authentication.py  test_build_config_file_url.py  test_get_url_from_args.py  test_gitignore_golden.py  test_integration.py  test_update_gitignore.py
tests/cassettes/: TestIntegration.test_normal_args.yaml
tests/gitignore_cases/existing_block/: cache_files.json  config_files  expected.gitignore  gitignore_in
tests/gitignore_cases/multi_cache/: cache_files.json  config_files  expected.gitignore
tests/gitignore_cases/mypy_fresh/: cache_files.json  config_files  expected.gitignore
tests/gitignore_cases/tool_not_installed/: cache_files.json  expected.gitignore
