[project]
name = "centralized-pre-commit-conf"
authors = ["Pierre Sassoulas <pierre.sassoulas@gmail.com>"]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/Pierre-Sassoulas/centralized-pre-commit-conf"
repository = "https://github.com/Pierre-Sassoulas/centralized-pre-commit-conf"
documentation = "https://github.com/Pierre-Sassoulas/centralized-pre-commit-conf"
keywords = ["linter", "pre-commit", "static analysis", "git hook", "centralized", "configuration"]
classifiers = [
    "Topic :: Software Development",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
]

[dependencies]
pre-commit = "^1.0"
colorama = "*"

[scripts]
pre-commit-conf = "centralized_pre_commit_conf.main:run"

[build-system]
requires = ["setuptools >= 45.1", "wheel >= 0.34"]
build-backend = "setuptools.build_meta"

[tool.dephell.main]
# dephell deps convert
from = "pyproject.toml"
to = "setup.py"
