[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pierre Sassoulas", email = "pierre.sassoulas@gmail.com"}]
name = "centralized-pre-commit-conf"
version = "0.7.0"
description = "Easily install and update centralized pre-commit hooks and their configuration files in decentralized repositories"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.10"
dependencies = [
    "setuptools>=45.1",
    "wheel>=0.34",
    "colorama",
    "confuse",
    "pre-commit>=1.16",
    "requests",
    "typing_extensions",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Pierre-Sassoulas/centralized-pre-commit-conf"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest-vcr",
    "pytest-remaster",
    "coverage",
    "python-coveralls",
    "coveralls",
    "pylint==4.0.6",
]

[project.scripts]
pre-commit-conf = "centralized_pre_commit_conf.main:run"

[tool.pytest.ini_options]
# Golden masters are compared strictly; regenerate locally with --remaster.
remaster-by-default = false

[tool.setuptools]
package-dir = {}
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = true}

[tool.setuptools.package-data]
centralized_pre_commit_conf = [
    "*.cfg",
    "*.yaml",
    "*.pylintrc",
    "*.flake8",
]
