[metadata]
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
name = centralized-pre-commit-conf
version = 0.5.0
description = Easily install and update centralized pre-commit hooks and their configuration files in decentralized repositories
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
url = https://github.com/Pierre-Sassoulas/centralized-pre-commit-conf

[options]
packages = find_namespace:
package_dir =

install_requires =
    setuptools>=45.1
    wheel>=0.34
    colorama
    confuse
    pre-commit>=1.16
    requests
tests_require =
    pytest-cov
    pytest-vcr
    python-coveralls
    coverage
    coveralls
    pylint==2.12.2
zip_safe = True

[options.entry_points]
console_scripts =
    pre-commit-conf=centralized_pre_commit_conf.main:run

[options.extras_require]
test =
    pytest-cov
    pytest-vcr
    coverage
    python-coveralls
    coveralls
    pylint==2.12.2

[options.package_data]
centralized_pre_commit_conf =
    *.cfg
    *.yaml
    *.pylintrc
    *.flake8

[mypy-pytest]
ignore_missing_imports = True

[mypy-_pytest.*]
ignore_missing_imports = True

[mypy-setuptools*]
ignore_missing_imports = True

[mypy-requests*]
ignore_missing_imports = True

[mypy-confuse*]
ignore_missing_imports = True

[mypy-colorama]
ignore_missing_imports = True
